# algorithms-and-datastuctures

./: .gitignore  CLL.cpp  Direct and InDirect recursive.cpp  Doubly Linke List C++ Codes.cpp  README.md  Revers SLL using Recursive Function.cpp  docker-compose.yml  main.cpp  normal.cpp  recursion.cpp
.devcontainer/: devcontainer.json
assignments/playlist-management-system/: .gitignore  SLL.cpp  array.cpp  assignment.md  main.cpp
assignments/postfix/: README.md  assignment.md  main.cpp
assignments/print-job-scheduling/: .gitignore  README.md  assignment.md  main.cpp  main.tex  test.cpp
assignments/randomized-quick-sort/: README.md  assignment.md  main.cpp  main.tex
assignments/spell-checker/: .gitignore  README.md  SpellChecker.cpp  SpellChecker.h  assignment.md  main.cpp  main.tex  test.cpp  test.py
assignments/vd-software/: .gitignore
assignments/vd-software/assignment_1_1/: CMakeLists.txt  DataManager.cpp  DataManager.h  Student.cpp  Student.h  Test.cpp  Test.h  TestResult.cpp  TestResult.h  UserInterface.cpp  UserInterface.h  run.sh
assignments/vd-software/assignment_2_1/: CMakeLists.txt  main.cpp
assignments/vd-software/assignment_2_2/: CMakeLists.txt  Student.cpp  main.cpp  run.sh  student.h
assignments/vd-software/assignment_3_1/: CMakeLists.txt  README.md  demo.mkv  main.cpp
assignments/vd-software/assignment_4_1/: CMakeLists.txt  README.md  main.cpp
assignments/vd-software/mario/: CMakeLists.txt  LICENSE  README.md  run.sh
assignments/vd-software/mario/Source/: mario
assignments/vd-software/mario/include/: Animation.hpp  Block.hpp  Coin.hpp  Entity.hpp  Game.hpp  Level.hpp  Mario.hpp  Mushroom.hpp
assignments/vd-software/mario/resources/: README.txt  debug_info.txt
assignments/vd-software/mario/src/: Animation.cpp  Block.cpp  Coin.cpp  ConvertSketch.cpp  DrawMap.cpp  Enemy.cpp  Entity.cpp  Game.cpp  Goomba.cpp  Koopa.cpp  Level.cpp  Main.cpp  MapCollision.cpp  MapManager.cpp  Mario.cpp  Mushroom.cpp  SoundManager.cpp  main.cpp
assignments/vd-software/mario/src/Headers/: SoundManager.hpp
assignments/vd-software/mario/src/headers/: Animation.hpp  Enemy.hpp  Global.hpp  Goomba.hpp  Koopa.hpp  Mario.hpp
cherno/: .gitignore  CMakeLists.txt  Log.cpp  Log.h  Math.cpp  main.asm  main.cpp
notes/: note.md
